fixed image size uneven

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,3 +1,8 @@
 p {
-    font-size: 15px;
+  font-size: 15px;
+}
+
+img {
+  width: 100px !important;
+  height: 140px !important;
 }
